tests/paczka2/big_fuzzy/69272326.err
Error in line 13: 4Ei9 A824 56,2
Error in line 22: PW5WyL8 A824 72,7
Error in line 37: 4Ei9 S504 40,0
Error in line 41: X8Ewy7jAQ A990 13,4
Error in line 51: X8Ewy7jAQ A990 2,9
Error in line 40: S504 A990 45,1
Error in line 49: mycRnSXYwMw A990 53,1
Error in line 61: S504 A824 76,8
Error in line 73: CUT04aFxUs6 S71 10,0
Error in line 80: PW5WyL8 A824 1016,6
Error in line 77: g6j12YIcV A824 23,2
Error in line 84: CUT04aFxUs6 S504 29,1
Error in line 94: 4Ei9 A990 97,7
Error in line 95: 4Ei9 S504 83,4
Error in line 102: 4Ei9 S71 2,1
Error in line 106: mycRnSXYwMw S504 82,3
Error in line 120: S504 S504 37,3
Error in line 119: CUT04aFxUs6 S504 81,6
Error in line 128: CUT04aFxUs6 A824 74,2
Error in line 135: mycRnSXYwMw S71 3,0
Error in line 142: X8Ewy7jAQ A824 78,1
Error in line 136: 4Ei9 A990 231,4
Error in line 143: mycRnSXYwMw A824 62,5
Error in line 150: mycRnSXYwMw S71 83,4
Error in line 138: g6j12YIcV S71 67,7
Error in line 154: PW5WyL8 A824 62,5
Error in line 162: g6j12YIcV S504 91,4
Error in line 170: g6j12YIcV S71 19,4
Error in line 168: CUT04aFxUs6 S71 11,4
Error in line 177: 4Ei9 A990 89,1
Error in line 179: 4Ei9 A824 50,6
Error in line 182: mycRnSXYwMw S71 27,8
Error in line 187: 4Ei9 A990 7,4
Error in line 201: S504 A824 61,2
Error in line 220: 4Ei9 A990 35,9
Error in line 219: X8Ewy7jAQ A824 0,9
Error in line 240: X8Ewy7jAQ S71 208,74
Error in line 213: CUT04aFxUs6 S504 246,3
Error in line 248: CUT04aFxUs6 S71 16,0
Error in line 231: X8Ewy7jAQ S71 75,8
